--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -1,51 +1,52 @@
 <link rel="stylesheet" href="../css/editProfile.css">
 
 <div ng-controller="profileController" class="editProfile-main container">
+
+    <h3>Settings</h3>
+    <hr>
+
     <div class="row editProfile-section">
         <form ng-controller="profileController" ng-submit="submitEdit()">
 
-            <h4>These are your profile settings.<br/>
-            Please choose which of the below you wish to edit</h4>
+            <h4>Please choose which of the below you wish to edit</h4>
 
             <div class="form-group">
                 <label for="username"> Username</label> <br>
-                <input type="text" name="username" ng-model="edit.username" placeholder="username" class="form-control">
+                <input type="text" name="username" ng-model="edit.username" class="form-control">
             </div>
             <div class="form-group">
                 <label for="firstName"> First Name</label> <br>
-                <input type="text" name="firstName" ng-model="edit.firstName" placeholder="First Name" class="form-control">
+                <input type="text" name="firstName" ng-model="edit.firstName" class="form-control">
             </div>
             <div class="form-group">
                 <label for="middleName"> Middle Name</label> <br>
-                <input type="text" name="middleName" ng-model="edit.middleName" placeholder="Middle Name" class="form-control">
+                <input type="text" name="middleName" ng-model="edit.middleName" class="form-control">
             </div>
             <div class="form-group">
                 <label for="lastName"> Last Name</label> <br>
-                <input type="text" name="lastName" ng-model="edit.lastName" placeholder="Last Name" class="form-control">
+                <input type="text" name="lastName" ng-model="edit.lastName" class="form-control">
             </div>
             <div class="form-group">
                 <label for="homeNumber"> Home Number</label> <br>
-                <input type="text" name="homeNumber" ng-model="edit.homeNumber" placeholder="Home Number" class="form-control">
+                <input type="text" name="homeNumber" ng-model="edit.homeNumber" class="form-control">
             </div>
             <div class="form-group">
                 <label for="phoneNumber1"> Phone Number 1</label> <br>
-                <input type="text" name="phoneNumber1" ng-model="edit.phoneNumber1" placeholder="Phone Number 1" class="form-control">
+                <input type="text" name="phoneNumber1" ng-model="edit.phoneNumber1" class="form-control">
             </div>
             <div class="form-group">
                 <label for="phoneNumber2"> Phone Number 2</label> <br>
-                <input type="text" name="phoneNumber2" ng-model="edit.phoneNumber2" placeholder="Phone Number 2" class="form-control">
+                <input type="text" name="phoneNumber2" ng-model="edit.phoneNumber2" class="form-control">
             </div>
 
-            <button type="submit" class="btn btn-default">Edit yourself!</button>
+            <button type="submit" class="btn btn-success">Edit yourself!</button>
         </form>
       </div>
-
-        <hr>
 
         <div class="row editProfile-section">
           <form ng-controller="profileController" ng-submit="passChange()">
 
-              <h4>If you wish to change your password please fill the below textboxes.</h4>
+              <h4>If you wish to change your password please fill the below textboxes</h4>
 
               <div class="form-group">
                 <label for="password"> Your current password</label>
@@ -64,7 +65,7 @@
                 <input type="password" name="verNewPassword" ng-model="verNewPassword" class="form-control">
               </div>
 
-              <button type="submit" class="btn btn-default">Change password</button>
+              <button type="submit" class="btn btn-success">Change password</button>
 
               <div ng-if="messageEmpty">
                 {{messageEmpty}}
@@ -82,12 +83,10 @@
           </form>
         </div>
 
-        <hr>
-
         <div class="row editProfile-section">
           <form ng-controller="profileController" ng-submit="delete()">
 
-              <h4>Are you leaving us? :(</h4>
+              <h4>Delete your profile</h4>
 
               <div class="form-group">
                 <label for="password"> Your current password</label>
@@ -98,7 +97,7 @@
                 <input type="password" name="verify" ng-model="dVerify" class="form-control">
               </div>
 
-              <button type="submit" class="btn btn-default">Bye bye :(</button>
+              <button type="submit" class="btn btn-danger">Bye bye :(</button>
 
               <div ng-if="messagePass">
                 {{messagePass}}
