--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -78,22 +78,27 @@
                         </div>
                     </div><!-- End of profile info -->
                     <div class="col-md-9" style="text-align: left !important;"><!-- Start of posts area -->
-                        <div ng-if="!Posts">
+                        <div ng-if="!posts">
                             <h3>
                                 This user has no posts yet.
                             </h3>
                         </div>
-                        <a id="new-btn" href="/post/new" class="btn btn-primary">Create a new Post!</a>
+                        <a id="new-btn" href="/post/new" class="btn btn-primary">Create a new post!</a>
                         <hr>
-                        <div ng-if="Posts">
-                            <div ng-repeat="post in Posts">
+                        <div ng-if="posts">
+                            <div ng-repeat="post in posts | startFrom:(currentPage - 1) * pageSize | limitTo:pageSize">
                                 <div class="panel panel-default">
                                     <div class="panel-body">
                                         <div class="media">
                                             <div class="media-left">
                                                 <!-- post image -->
                                                 <a href="#">
-                                                    <img class="media-object" src="http://placehold.it/150x150" alt="...">
+                                                    <div ng-if="post.image">
+                                                        <img class="media-object" src="{{post.image.substring(7,post.image.length)}}" width="150px" alt="...">
+                                                    </div>
+                                                    <div ng-if="!post.image">
+                                                        <img class="media-object" src="http://placehold.it/150x150" alt="...">
+                                                    </div>
                                                 </a>
                                             </div>
                                             <div class="media-body">
@@ -113,6 +118,8 @@
                                     </div> <!-- End of panel-body -->
                                 </div> <!-- End of panel -->
                             </div> <!-- End of row -->
+                            <ul uib-pagination boundary-links="true" total-items="posts.length" items-per-page="pageSize" ng-model="currentPage" max-size="maxSize" class="pagination-md pagination" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
+                            </ul>
                         </div>
                     </div><!-- End of posts area -->
                 </div>
