--- a/public/views/filter.html
+++ b/public/views/filter.html
@@ -37,7 +37,7 @@
                             <!-- fixing description length to display by 250 chars -->
                             <p>{{ post.description.slice(0,250) }}...</p>
                             <!-- link to show post page -->
-                            <div ng-controller="profileController" ng-click="viewPost()">
+                            <div ng-controller="viewMoreDirectionController" ng-click="submitViewMore()">
                                 <button type="button" class="btn btn-primary" id="edit-btn">View more</button>
                             </div>
                         </div>
