--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -66,6 +66,11 @@
               <input type="text" name="phoneNumber2" ng-model="edit.phoneNumber2" class="form-control">
             </div>
 
+            <div class="form-group">
+              <label for="profilePicture">Upload image</label> <br>
+              <input type="file" name="profilePicture" ng-File-Model="edit.profilePicture" />
+            </div>
+
             <button type="submit" class="btn btn-success" id="edit-btn">Edit yourself!</button>
 
           </div>
