--- a/public/views/login.html
+++ b/public/views/login.html
@@ -9,7 +9,7 @@
 
 	<form id="login">
 		<div class="form-group">
-			<label>Username</label>
+			<label>Username or Email</label>
 			<input type="text" id = "username" ng-model="formData.username" class="form-control">
 		</div>
 
